erDiagram
    client {
        INTEGER code PK
        TEXT    surname
        TEXT    name
        TEXT    secname
        TEXT    address
        TEXT    phone
    }

    routes {
        INTEGER code PK
        TEXT    name
        TEXT    climate
        INTEGER duration
        TEXT    hotel
        INTEGER cost
    }

    package {
        INTEGER code PK
        TEXT    date
        INTEGER quantity
        INTEGER discount
        INTEGER airline_code      FK
        INTEGER touroperator_code FK
        INTEGER manager_code      FK
    }

    package_client {
        INTEGER code PK
        INTEGER package FK
        INTEGER client  FK
    }

    package_route {
        INTEGER code PK
        INTEGER package FK
        INTEGER routes  FK
    }

    airline {
        INTEGER code PK
        TEXT    name
        INTEGER flight_cost
    }

    touroperator {
        INTEGER code PK
        TEXT    name
        TEXT    address
        TEXT    phone
        TEXT    website
    }

    manager {
        INTEGER code PK
        TEXT    surname
        TEXT    name
        TEXT    secname
        TEXT    position
        TEXT    phone
        TEXT    email
    }

    payment {
        INTEGER code PK
        INTEGER package_code FK "UNIQUE"
        TEXT    date
        INTEGER amount
        TEXT    method
        TEXT    status
    }

    %% --- связи ---
    package        ||--o{ package_client : ""
    client         ||--o{ package_client : ""
    package        ||--o{ package_route  : ""
    routes         ||--o{ package_route  : ""

    airline        ||--o{ package        : "выполняет перелёт"
    touroperator   ||--o{ package        : "оформляет"
    manager        ||--o{ package        : "продал"
    package        ||--|| payment        : "имеет 1:1"
